--- a/tasks/level-1/5.3.3.yml
+++ b/tasks/level-1/5.3.3.yml
@@ -3,12 +3,30 @@
 
 # 5.3.3 Ensure password reuse is limited
 
-- name: 5.3.3 - Ensure password reuse is limited
-  debug:
-    msg: "WARNING - This check has not been implemented yet."
+- name: 5.3.3 - Ensure password reuse is limited for system-auth
+  pamd:
+    name: system-auth
+    type: password
+    control: sufficient
+    module_path: pam_unix.so
+    module_arguments: "remember=5"
+    state: args_present
   tags:
     - level-1
     - section-5
     - "5.3.3"
     - scored
-    - todo
+
+- name: 5.3.3 - Ensure password resuse is limited for password-auth
+  pamd:
+    name: password-auth
+    type: password
+    control: sufficient
+    module_path: pam_unix.so
+    module_arguments: "remember=5"
+    state: args_present
+  tags:
+    - level-1
+    - section-5
+    - "5.3.3"
+    - scored
